--- a/Part_1_LS_Probability_Model.ipynb
+++ b/Part_1_LS_Probability_Model.ipynb
@@ -105,7 +105,7 @@
    "source": [
     "# GLIM reclassification, lithology values to coefficients\n",
     "glim_copy = glim_ras.copy()  \n",
-    "glob_copy_flt = np.asarray(glim_copy, dtype=np.float, order='C') # I think we might need to make the integer values floats before reclassifying\n",
+    "glim_copy_flt = np.asarray(glim_copy, dtype=np.float, order='C') # I think we might need to make the integer values floats before reclassifying\n",
     "glim_copy_flt[np.where(glob_copy_flt == 1.)] = -0.81 # Intermediate Volcanic Rock, vi\n",
     "glim_copy_flt[np.where(glob_copy_flt == 2.)] = -1.5 # Basic Volcanic Rocks, vb\n",
     "glim_copy_flt[np.where(glob_copy_flt == 3.)] = -0.78 # Acid Plutonic Rocks, pa\n",
