Added GLIM and GLOB tables

--- a/Part_1_LS_Probability_Model.ipynb
+++ b/Part_1_LS_Probability_Model.ipynb
@@ -432,6 +432,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "| Landcover Type | GLOB Cover Value | Coefficient |\n",
+    "| :---: | :---: | :---: |\n",
+    "| Rainfed croplands | 14 | 0.91 |\n",
+    "| Mosaic cropland | 20 | 0.88 |\n",
+    "| Mosaic vegetation | 30 | 0.78 |\n",
+    "| Closed to open broadleaved evergreen or semideciduous forest | 40 | 0.68 |\n",
+    "| Closed broadleaved deciduous forest | 50 | 0.30 |\n",
+    "| Rainfed croplands | 60 | 1.77 |\n",
+    "| Closed needleleaved evergreen forest | 70 | 1.71 |\n",
+    "| Open needleleaved deciduous or evergreen forest | 90 | -1.26 |\n",
+    "| Closed to open mixed broadleaved and needleleaved forest | 100 | 1.50 |\n",
+    "| Mosaic forest or shrubland/grassland | 110 | 0.68 |\n",
+    "| Mosaic grassland/forest or shrubland | 120 | 1.13 |\n",
+    "| Closed to open broadleaved or needleleaved, evergreen or deciduous  | 130 | 0.79 |\n",
+    "| Closed to open herabceous vegetation | 140 | 1.03 |\n",
+    "| Sparse vegetation | 150 | 0.54 |\n",
+    "| Closed to open broadleaved forest regulary flooded | 160 | 2.34 |\n",
+    "| Closed to open grassland or woody vegetation on regularly flooded or waterlogged, soil, fresh, brackish, or saline water | 180 | 1.19 |\n",
+    "| Artificial surfaces and associated areas | 190 | 0.30 |\n",
+    "| Bare areas | 200 | -0.06 |\n",
+    "| Water Bodies | 210 | NaN |\n",
+    "| Permanent snow and ice | 220 | -0.18 |\n",
+    "| No data | 230 | -1.08 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## GLOB reclassification, cover values to coefficients"
    ]
   },
@@ -589,6 +618,29 @@
     "\n",
     "# Now read the cti file and set masked=True to mask the -32768 values (we now have a numpy masked array)\n",
     "lithology_initial = lithology_src.read(1, masked=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| GLIM Lithology Name | Glim Value | Coefficient |\n",
+    "| :---: | :---: | :---: |\n",
+    "| Intermediate Volcanic Rock | 1 | -0.81 |\n",
+    "| Basic Volcanic Rocks | 2 | -1.50 |\n",
+    "| Acid Plutonic Rocks | 3 | -0.78 |\n",
+    "| Metamorphic Rocks | 4 | -1.87 |\n",
+    "| Unconsolidated Sediments | 5 | -3.22 |\n",
+    "| Siliciclastic Sedimentary Rocks | 6 | -1.92 |\n",
+    "| Basic Plutonic Rocks | 7 | -1.88 |\n",
+    "| Intermediate Plutonic Rocks | 8 | -1.61 |\n",
+    "| Mixed Sedimentary Rocks | 9 | -1.36 |\n",
+    "| Water Bodies | 10 | NaN |\n",
+    "| Pyroclastics | 11 | -1.05 |\n",
+    "| Carbonate Sedimentary Rocks  | 12 | -0.95 |\n",
+    "| Acid Volcanic Rocks | 13 | -1.54 |\n",
+    "| No Data | 14 | -0.66 |\n",
+    "| Evaporites | 15 | NaN |"
    ]
   },
   {
