Fix typos, remove redundant notes, and clean up file

--- a/Part_1_LS_Probability_Model.ipynb
+++ b/Part_1_LS_Probability_Model.ipynb
@@ -14,19 +14,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/srv/conda/envs/notebook/lib/python3.8/site-packages/rasterio/plot.py:263: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "  if len(arr.shape) is 2:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Import all modules \n",
-    "# These were copied directly from lab 07\n",
+    "# Import modules \n",
     "import os\n",
     "import requests\n",
     "import contextily as ctx\n",
@@ -55,7 +45,7 @@
    "source": [
     "### Workflow\n",
     "* Modify input rasters and use gdalwarp to project, clip, and resample rasters\n",
-    "* Reclassify land cover (GLOB) and lithology (GLIM) datasets - Move description right before landcover and lithology code blocks?\n",
+    "* Reclassify land cover (GLOB) and lithology (GLIM) datasets\n",
     "* Use Nowicki et al. (2018) equation to create LS probability model"
    ]
   },
@@ -167,18 +157,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating output file that is 1365P x 1250L.\n",
-      "Processing data/cti/cti_initial_mod.tif [1/1] : 0Using internal nodata values (e.g. -32768) for image data/cti/cti_initial_mod.tif.\n",
-      "Copying nodata values from source data/cti/cti_initial_mod.tif to destination data/cti/cti_warp.tif.\n",
-      "...10...20...30...40...50...60...70...80...90...100 - done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use gdalwarp to project, trim, and resample raster\n",
     "if not os.path.exists(cti_output_fn):\n",
@@ -235,7 +214,6 @@
    "outputs": [],
    "source": [
     "# Set name of the input and output files\n",
-    "# input_crs = 'EPSG:4326'    # Do not need to include gdalwarp knows from input file\n",
     "output_crs = 'EPSG:32610'\n",
     "elev_input_fn = 'data/slope/gmted_elev_initial.tif'\n",
     "elev_output_fn = 'data/slope/elev_warp.tif'"
@@ -245,18 +223,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating output file that is 1365P x 1250L.\n",
-      "Processing data/slope/gmted_elev_initial.tif [1/1] : 0Using internal nodata values (e.g. -32768) for image data/slope/gmted_elev_initial.tif.\n",
-      "Copying nodata values from source data/slope/gmted_elev_initial.tif to destination data/slope/elev_warp.tif.\n",
-      "...10...20...30...40...50...60...70...80...90...100 - done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use gdalwarp to project, trim, and resample raster\n",
     "if not os.path.exists(elev_output_fn):\n",
@@ -280,15 +247,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0...10...20...30...40...50...60...70...80...90...100 - done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# gdaldem slope input_dem output_slope_map\n",
     "# Generates a slope map from any GDAL-supported elevation raster\n",
@@ -341,7 +300,6 @@
    "outputs": [],
    "source": [
     "# Set name of the input and output files\n",
-    "# input_crs = 'EPSG:4326'    # Do not need to include gdalwarp knows from input file\n",
     "output_crs = 'EPSG:32610'\n",
     "pgv_input_fn = 'data/pgv/pgvwsite_csz010.tif'\n",
     "pgv_output_fn = 'data/pgv/pgv_warp.tif'"
@@ -351,18 +309,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating output file that is 1365P x 1250L.\n",
-      "Processing data/pgv/pgvwsite_csz010.tif [1/1] : 0Using internal nodata values (e.g. -999) for image data/pgv/pgvwsite_csz010.tif.\n",
-      "Copying nodata values from source data/pgv/pgvwsite_csz010.tif to destination data/pgv/pgv_warp.tif.\n",
-      "...10...20...30...40...50...60...70...80...90...100 - done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use gdalwarp to project, trim, and resample raster\n",
     "if not os.path.exists(pgv_output_fn):\n",
@@ -407,7 +354,7 @@
    "metadata": {},
    "source": [
     "### Land Cover (GLOB)\n",
-    "* Glim reclassification, lithology values to coefficients\n",
+    "* Globcover reclassification, landcover values to coefficients\n",
     "* Save as a new tif file to input into gdalwarp\n",
     "* Use gdalwarp to project, clip, and resample the input GLIM raster"
    ]
@@ -488,23 +435,23 @@
    ],
    "source": [
     "glob_copy = landcover_initial.copy()  \n",
-    "glob_copy_flt = np.asarray(glob_copy, dtype=np.float, order='C') # I think we might need to make the integer values floats before reclassifying\n",
-    "glob_copy_flt[np.where(glob_copy_flt == 11.)] = np.nan # Rainfed croplands\n",
-    "glob_copy_flt[np.where(glob_copy_flt == 14.)] = 0.91 # Rainfed croplands\n",
-    "glob_copy_flt[np.where(glob_copy_flt == 20.)] = 0.88 # Mosaic cropland\n",
-    "glob_copy_flt[np.where(glob_copy_flt == 30.)] = 0.78 # Mosaic vegetation\n",
-    "glob_copy_flt[np.where(glob_copy_flt == 40.)] = 0.68 # Closed to open broadleaved evergreen or semideciduous forest\n",
-    "glob_copy_flt[np.where(glob_copy_flt == 50.)] = 0.3 # Closed broadleaved deciduous forest\n",
-    "glob_copy_flt[np.where(glob_copy_flt == 60.)] = 1.77 # Open broadleaved deciduous forest/woodland\n",
-    "glob_copy_flt[np.where(glob_copy_flt == 70.)] = 1.71 # Open broadleaved deciduous forest/woodland\n",
-    "glob_copy_flt[np.where(glob_copy_flt == 90.)] = -1.26 # Closed needleleaved evergreen forest\n",
-    "glob_copy_flt[np.where(glob_copy_flt == 100.)] = 1.5 # Closed to open mixed broadleaved and needleleaved forest\n",
-    "glob_copy_flt[np.where(glob_copy_flt == 110.)] = 0.68 # Mosaic forest or shrubland/grassland\n",
-    "glob_copy_flt[np.where(glob_copy_flt == 120.)] = 1.13 # Mosaic grassland/forest or shrubland\n",
-    "glob_copy_flt[np.where(glob_copy_flt == 130.)] = 0.79 # Closed to open broadleaved or needleleaved, evergreen or deciduous \n",
-    "glob_copy_flt[np.where(glob_copy_flt == 140.)] = 1.03 # Closed to open herabceous vegetation\n",
-    "glob_copy_flt[np.where(glob_copy_flt == 150.)] = 0.54 # Sparse vegetation\n",
-    "glob_copy_flt[np.where(glob_copy_flt == 160.)] = 2.34 # Closed to open broadleaved forest regulary flooded\n",
+    "glob_copy_flt = np.asarray(glob_copy, dtype=np.float, order='C') # Make the integer values floats before reclassifying\n",
+    "glob_copy_flt[np.where(glob_copy_flt == 11.)] = np.nan \n",
+    "glob_copy_flt[np.where(glob_copy_flt == 14.)] = 0.91 \n",
+    "glob_copy_flt[np.where(glob_copy_flt == 20.)] = 0.88 \n",
+    "glob_copy_flt[np.where(glob_copy_flt == 30.)] = 0.78 \n",
+    "glob_copy_flt[np.where(glob_copy_flt == 40.)] = 0.68 \n",
+    "glob_copy_flt[np.where(glob_copy_flt == 50.)] = 0.3 \n",
+    "glob_copy_flt[np.where(glob_copy_flt == 60.)] = 1.77\n",
+    "glob_copy_flt[np.where(glob_copy_flt == 70.)] = 1.71 \n",
+    "glob_copy_flt[np.where(glob_copy_flt == 90.)] = -1.26 \n",
+    "glob_copy_flt[np.where(glob_copy_flt == 100.)] = 1.5 \n",
+    "glob_copy_flt[np.where(glob_copy_flt == 110.)] = 0.68 \n",
+    "glob_copy_flt[np.where(glob_copy_flt == 120.)] = 1.13 \n",
+    "glob_copy_flt[np.where(glob_copy_flt == 130.)] = 0.79 \n",
+    "glob_copy_flt[np.where(glob_copy_flt == 140.)] = 1.03 \n",
+    "glob_copy_flt[np.where(glob_copy_flt == 150.)] = 0.54 \n",
+    "glob_copy_flt[np.where(glob_copy_flt == 160.)] = 2.34\n",
     "glob_copy_flt[np.where(glob_copy_flt == 170.)] = np.nan\n",
     "glob_copy_flt[np.where(glob_copy_flt == 180.)] = 1.19  \n",
     "glob_copy_flt[np.where(glob_copy_flt == 190.)] = 0.3  \n",
@@ -543,18 +490,7 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating output file that is 1365P x 1250L.\n",
-      "Processing data/landcover/glob_reclass.tif [1/1] : 0Using internal nodata values (e.g. -32768) for image data/landcover/glob_reclass.tif.\n",
-      "Copying nodata values from source data/landcover/glob_reclass.tif to destination data/landcover/landcover_warp.tif.\n",
-      "...10...20...30...40...50...60...70...80...90...100 - done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use gdalwarp to project, trim, and resample raster\n",
     "if not os.path.exists(glob_output_fn):\n",
@@ -599,7 +535,7 @@
    "metadata": {},
    "source": [
     "### Lithology (GLIM)\n",
-    "* Globcover reclassification, landcover values to coefficients\n",
+    "* Glim reclassification, lithology values to coefficients\n",
     "* Save as a new tif file to input into gdalwarp\n",
     "* Use gdalwarp to project, clip, and resample the input GLIM raster"
    ]
@@ -667,22 +603,22 @@
    ],
    "source": [
     "glim_copy = lithology_initial.copy()  \n",
-    "glim_copy_flt = np.asarray(glim_copy, dtype=np.float, order='C') # I think we might need to make the integer values floats before reclassifying\n",
-    "glim_copy_flt[np.where(glim_copy_flt == 1.)] = -0.81 # Intermediate Volcanic Rock, vi\n",
-    "glim_copy_flt[np.where(glim_copy_flt == 2.)] = -1.5 # Basic Volcanic Rocks, vb\n",
-    "glim_copy_flt[np.where(glim_copy_flt == 3.)] = -0.78 # Acid Plutonic Rocks, pa\n",
-    "glim_copy_flt[np.where(glim_copy_flt == 4.)] = -1.87 # Metamorphic Rocks, mt\n",
-    "glim_copy_flt[np.where(glim_copy_flt == 5.)] = -3.22 # Unconsolidated Sediments, su\n",
-    "glim_copy_flt[np.where(glim_copy_flt == 6.)] = -1.92 # Siliciclastic Sedimentary Rocks, ss\n",
-    "glim_copy_flt[np.where(glim_copy_flt == 7.)] = -1.88 # Basic Plutonic Rocks, pb\n",
-    "glim_copy_flt[np.where(glim_copy_flt == 8.)] = -1.61 # Intermediate Plutonic Rocks, pi\n",
-    "glim_copy_flt[np.where(glim_copy_flt == 9.)] = -1.36 # Mixed Sedimentary Rocks, sm\n",
-    "glim_copy_flt[np.where(glim_copy_flt == 10.)] = np.nan # Water Bodies, wb\n",
-    "glim_copy_flt[np.where(glim_copy_flt == 11.)] = -1.05 # Pyroclastics, py\n",
-    "glim_copy_flt[np.where(glim_copy_flt == 12.)] = -0.95 # Carbonate Sedimentary Rocks, sc \n",
-    "glim_copy_flt[np.where(glim_copy_flt == 13.)] = -1.54 # Acid Volcanic Rocks, va\n",
-    "glim_copy_flt[np.where(glim_copy_flt == 14.)] = -0.66 # No Data, nd\n",
-    "glim_copy_flt[np.where(glim_copy_flt == 15.)] = np.nan # Evaporites, ev\n",
+    "glim_copy_flt = np.asarray(glim_copy, dtype=np.float, order='C') # Make the integer values floats before reclassifying\n",
+    "glim_copy_flt[np.where(glim_copy_flt == 1.)] = -0.81\n",
+    "glim_copy_flt[np.where(glim_copy_flt == 2.)] = -1.5 \n",
+    "glim_copy_flt[np.where(glim_copy_flt == 3.)] = -0.78 \n",
+    "glim_copy_flt[np.where(glim_copy_flt == 4.)] = -1.87 \n",
+    "glim_copy_flt[np.where(glim_copy_flt == 5.)] = -3.22 \n",
+    "glim_copy_flt[np.where(glim_copy_flt == 6.)] = -1.92 \n",
+    "glim_copy_flt[np.where(glim_copy_flt == 7.)] = -1.88 \n",
+    "glim_copy_flt[np.where(glim_copy_flt == 8.)] = -1.61 \n",
+    "glim_copy_flt[np.where(glim_copy_flt == 9.)] = -1.36 \n",
+    "glim_copy_flt[np.where(glim_copy_flt == 10.)] = np.nan \n",
+    "glim_copy_flt[np.where(glim_copy_flt == 11.)] = -1.05 \n",
+    "glim_copy_flt[np.where(glim_copy_flt == 12.)] = -0.95 \n",
+    "glim_copy_flt[np.where(glim_copy_flt == 13.)] = -1.54 \n",
+    "glim_copy_flt[np.where(glim_copy_flt == 14.)] = -0.66\n",
+    "glim_copy_flt[np.where(glim_copy_flt == 15.)] = np.nan\n",
     "glim_copy_flt[np.where(glim_copy_flt == -128.)] = np.nan \n",
     "glim_copy_flt"
    ]
@@ -715,18 +651,7 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating output file that is 1365P x 1250L.\n",
-      "Processing data/lithology/glim_reclass.tif [1/1] : 0Using internal nodata values (e.g. -32768) for image data/lithology/glim_reclass.tif.\n",
-      "Copying nodata values from source data/lithology/glim_reclass.tif to destination data/lithology/lithology_warp.tif.\n",
-      "...10...20...30...40...50...60...70...80...90...100 - done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use gdalwarp to project, trim, and resample raster\n",
     "if not os.path.exists(glim_output_fn):\n",
@@ -775,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,6 +722,7 @@
     "\n",
     "# Part 1 - Probability of Landslide element wise calcs (note np.log takes the natural logarithm)\n",
     "# Equation 8 in Nowicki et al. (2018)\n",
+    "# np.ma.log used to mask values\n",
     "t = a+(b*(np.ma.log(pgv_warp)))+(c*slope_warp)+glim_warp+glob_warp+(f*cti_warp)+(g*(np.ma.log(pgv_warp))*slope_warp)\n",
     "\n",
     "# Part 2 - Probability of Landslide calc\n",
@@ -849,34 +775,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plot of input rasters and output probability of landslide\n",
-    "* Because we are near the ocean it can be hard to differentiate where the coastline is\n",
-    "    * **Thus, we should add a base map. In ArcMap I really like the GEBCO_2019 Basemap, but I think we could choose any decent basemap if we want**"
+    "### Plot of input rasters and output probability of landslide"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['Toner', 'TonerBackground', 'TonerHybrid', 'TonerLines', 'TonerLabels', 'TonerLite', 'Watercolor', 'Terrain', 'TerrainBackground', 'TopOSMRelief', 'TopOSMFeatures'])"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ctx.providers.Stamen.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -944,6 +848,7 @@
     "prob_ls_cbar = f.colorbar(prob_ls_plot, ax=ax[1][2])\n",
     "prob_ls_cbar.set_label('Probability of Landslide (%)')\n",
     "\n",
+    "\n",
     "plt.tight_layout()"
    ]
   },
@@ -951,24 +856,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Note how there are small white blocks noticeable in the GLIM and Probability of Landslide plots. This was caused by Matplotlib's default interpolation:\n",
-    "* Had to set interpolation to 'none' for the Probability of Landslide map\n",
-    "* Switched np.log to np.ma.log"
+    "* Base Map added to differentiate coastline (OpenStreetMap.Mapnik has the best default water color)\n",
+    "* Lithology and landcover uses different qualitative (discrete) colormap because these represent qualitative lithology and landcover types \n",
+    "* Interpolation set to 'none' for the Probability of Landslide map to prevent plot from creating NoData sections (default is no longer none)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Lithology and landcover uses different qualitative (discrete) colormap because these represent qualitative lithology and landcover types "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
