fixed typo in min values

--- a/Part_1_LS_Probability_Model.ipynb
+++ b/Part_1_LS_Probability_Model.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "       0.0, -0.000833333333333115, 49.51666666666807), 'blockxsize': 128, 'blockysize': 128, 'tiled': True, 'compress': 'lzw', 'interleave': 'band'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "'data/cti/cti_initial_mod.tif'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "(367000.0, 640000.0, 5180000.0, 5430000.0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "(367000.0, 640000.0, 5180000.0, 5430000.0)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "(367000.0, 640000.0, 5180000.0, 5430000.0)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "       [ 0.  ,  0.  ,  0.  , ...,  0.  ,  0.  ,  0.  ]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
        "(367000.0, 640000.0, 5180000.0, 5430000.0)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
        "       [  nan,   nan,   nan, ..., -1.5 , -1.5 , -1.5 ]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
        "(367000.0, 640000.0, 5180000.0, 5430000.0)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,17 +732,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The maximum PGV value is 0.00 cm/s\n",
-      "The maximum slope value is 0.00 degrees\n",
-      "The maximum CTI value is 4.18\n",
-      "The maximum Probability of Landslide value is 0.00%\n",
+      "The minimum PGV value is 0.00 cm/s\n",
+      "The minimum slope value is 0.00 degrees\n",
+      "The minimum CTI value is 4.18\n",
+      "The minimum Probability of Landslide value is 0.00%\n",
       "\n",
       "The maximum PGV value is 436.72 cm/s\n",
       "The maximum slope value is 58.52 degrees\n",
@@ -757,10 +757,10 @@
     "# Lithology and Landcover are not shown here because they have qualitative placeholders reclassed with coefficients\n",
     "\n",
     "# Minimum for relevant input and output variables\n",
-    "print(\"The maximum PGV value is {:0.2f} cm/s\".format(pgv_warp.min()))\n",
-    "print(\"The maximum slope value is {:0.2f} degrees\".format(slope_warp.min()))\n",
-    "print(\"The maximum CTI value is {:0.2f}\".format(cti_warp.min()))\n",
-    "print(\"The maximum Probability of Landslide value is {:0.2f}%\".format(prob_ls.min()))\n",
+    "print(\"The minimum PGV value is {:0.2f} cm/s\".format(pgv_warp.min()))\n",
+    "print(\"The minimum slope value is {:0.2f} degrees\".format(slope_warp.min()))\n",
+    "print(\"The minimum CTI value is {:0.2f}\".format(cti_warp.min()))\n",
+    "print(\"The minimum Probability of Landslide value is {:0.2f}%\".format(prob_ls.min()))\n",
     "\n",
     "print(\"\")\n",
     "\n",
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
