--- a/Part_2_Area_Calculations.ipynb
+++ b/Part_2_Area_Calculations.ipynb
@@ -14,16 +14,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/srv/conda/envs/notebook/lib/python3.8/site-packages/rasterio/plot.py:263: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "  if len(arr.shape) is 2:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import modules \n",
     "import os\n",
@@ -881,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +882,7 @@
        "       0.0, -200.0, 5430000.0)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +915,8 @@
      "output_type": "stream",
      "text": [
       "High risk cell count : 281704\n",
-      "Low risk cell count : 956904\n"
+      "Low risk cell count : 956904\n",
+      "Total cells : 1706250\n"
      ]
     }
    ],
@@ -934,13 +926,16 @@
     "\n",
     "low_risk = np.count_nonzero((0 <= prob_ls) & (prob_ls <= 30))\n",
     "\n",
+    "total_cells = np.count_nonzero(prob_ls)\n",
+    "\n",
     "print('High risk cell count : ' + str(high_risk))\n",
-    "print('Low risk cell count : ' + str(low_risk))"
+    "print('Low risk cell count : ' + str(low_risk))\n",
+    "print('Total cells : ' + str(total_cells))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +943,8 @@
      "output_type": "stream",
      "text": [
       "High Risk Area : 11268.16 km^2\n",
-      "Low Risk Area : 38276.16 km^2\n"
+      "Low Risk Area : 38276.16 km^2\n",
+      "Total Area : 68250.0 km^2\n"
      ]
     }
    ],
@@ -960,9 +956,41 @@
     "\n",
     "high_area = high_risk * cell_area\n",
     "low_area = low_risk * cell_area\n",
+    "total_area = total_cells * cell_area\n",
     "\n",
     "print('High Risk Area : ' + str(high_area/1000000) + ' km^2')\n",
-    "print('Low Risk Area : ' + str(low_area/1000000) + ' km^2')"
+    "print('Low Risk Area : ' + str(low_area/1000000) + ' km^2')\n",
+    "print('Total Area : ' + str(total_area/1000000) + ' km^2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "High Risk Area : 16.51 %\n",
+      "Low Risk Area : 56.08 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "# As Percentages\n",
+    "high_percent = (high_area / total_area)*100\n",
+    "low_percent = (low_area / total_area)*100 \n",
+    "\n",
+    "print('High Risk Area : ' + str(round(high_percent, 2)) + ' %')\n",
+    "print('Low Risk Area : ' + str(round(low_percent, 2)) + ' %')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The remaining 27.41 % belongs to the 40 - 60 % range"
    ]
   },
   {
@@ -974,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1017,6 +1045,29 @@
     "\n",
     "print('High Risk Area : ' + str(high_area_50/1000000) + ' km^2')\n",
     "print('Low Risk Area : ' + str(low_area_50/1000000) + ' km^2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "High Risk Area : 28.91 %\n",
+      "Low Risk Area : 71.09 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "# As Percentages\n",
+    "high_50_percent = (high_area_50 / total_area)*100\n",
+    "low_50_percent = (low_area_50 / total_area)*100 \n",
+    "\n",
+    "print('High Risk Area : ' + str(round(high_50_percent, 2)) + ' %')\n",
+    "print('Low Risk Area : ' + str(round(low_50_percent, 2)) + ' %')"
    ]
   },
   {
